--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,10 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - release
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,6 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Check branch
+        run: |
+          if [ "$GITHUB_REF" != "refs/heads/release" ]; then
+            echo "Publishing only allowed from release branch"
+            exit 1
+          fi
       - uses: actions/setup-node@v4
         with:
           node-version: 20
