Fix build and test workflow: generate correct ESM extension, run build before test

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "test": "node test.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
