--- a/manual/vue/package.json
+++ b/manual/vue/package.json
@@ -1,21 +1,41 @@
 {
-  "name": "use-simple-debounce-vue-test",
-  "private": true,
+  "name": "vue",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "lint": "run-s lint:*"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "use-simple-debounce": "file:../.."
+    "use-simple-debounce": "file:../..",
+    "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.0"
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^22.18.6",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.33.0",
+    "eslint-plugin-oxlint": "~1.11.0",
+    "eslint-plugin-vue": "~10.4.0",
+    "jiti": "^2.5.1",
+    "npm-run-all2": "^8.0.4",
+    "oxlint": "~1.11.0",
+    "typescript": "~5.9.0",
+    "vite": "^7.1.7",
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vue-tsc": "^3.1.0"
   }
 }
