refactor: complete native to vanilla renaming
- Update remaining references in README.md, package.json, source files
- Remove old native directory references
- Ensure all imports and exports use 'vanilla' instead of 'native'

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "import": "./dist/vue.mjs",
       "require": "./dist/vue.js"
     },
-    "./native": {
+    "./vanilla": {
       "types": "./dist/native.d.ts",
       "import": "./dist/native.mjs",
       "require": "./dist/native.js"
