Add comprehensive Preact support
- Add dedicated src/preact.ts implementation using preact/hooks
- Add Preact unit tests in src/test/preact.test.ts
- Create complete manual test app in manual/preact/ with all test cases
- Update build configuration to include Preact exports
- Update package.json with Preact dependencies and exports
- Apply consistent styling to match other framework test apps

--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
       "import": "./dist/solid.mjs",
       "require": "./dist/solid.js"
     },
+    "./preact": {
+      "types": "./dist/preact.d.ts",
+      "import": "./dist/preact.mjs",
+      "require": "./dist/preact.js"
+    },
     "./svelte": {
       "types": "./dist/svelte.d.ts",
       "import": "./dist/svelte.mjs",
@@ -89,5 +94,8 @@
   "bugs": {
     "url": "https://github.com/juji/use-simple-debounce/issues"
   },
-  "homepage": "https://github.com/juji/use-simple-debounce#readme"
+  "homepage": "https://github.com/juji/use-simple-debounce#readme",
+  "dependencies": {
+    "preact": "^10.27.2"
+  }
 }
