Fix rapid calls test logic across all frameworks
- Use separate ref/state to track debounced execution count
- Ensure only 1 debounced execution occurs despite 10 rapid calls
- Apply consistent pattern across React, Preact, Solid, Svelte, Vue, and Svelte 5
- Update reset functions to properly clear ref/state variables

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@vitest/ui": "^3.2.4",
+    "concurrently": "^9.2.1",
     "react": "^19.1.1",
     "solid-js": "^1.9.9",
     "svelte": "^5.40.0",
