Enhance dev script to run all manual test apps simultaneously
- Use concurrently to run tsup --watch and all framework test apps
- Run React, Solid, Svelte, Vue, Preact, and Svelte 5 test apps in parallel
- Enable simultaneous development across all supported frameworks
- Fix Solid RapidCallsTest to properly track debounced executions

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch",
+    "dev": "concurrently \"tsup --watch\" \"cd manual/react && npm run dev\" \"cd manual/solid && npm run dev\" \"cd manual/svelte && npm run dev\" \"cd manual/vue && npm run dev\" \"cd manual/preact && npm run dev\" \"cd manual/svelte5 && npm run dev\"",
     "test": "vitest run",
     "test:watch": "vitest",
     "prepublishOnly": "npm run build"
