--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-simple-debounce",
-  "version": "1.2.0",
-  "description": "A simple, dependency-free debounce utility for React, Solid, Svelte, Vue, and vanilla JavaScript with async support",
+  "version": "1.3.0",
+  "description": "A simple, dependency-free debounce utility for React, Solid, Svelte, Vue, Preact, and vanilla JavaScript with async support",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
