Complete Shiki integration and demo setup
- Add demo.astro page with comprehensive code examples
- Update BaseLayout.astro footer links
- Update index.astro hero section links
- Add Shiki dependency to doc/package.json
- Create theme-aware syntax highlighting for docs

--- a/doc/package.json
+++ b/doc/package.json
@@ -20,6 +20,7 @@
     "preact": "^10.27.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "shiki": "^3.13.0",
     "solid-js": "^1.9.9",
     "svelte": "^5.40.0",
     "typescript": "^5.9.3",
