feat: extract header component and install Pagefind
- Extract header into reusable Header.astro component
- Restructure header layout with navigation positioned before theme toggle
- Install Pagefind search library for future implementation
- Update BaseLayout to use new Header component
- Maintain all existing functionality and responsive design

--- a/doc/package.json
+++ b/doc/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro": "^5.14.5",
+    "pagefind": "^1.4.0",
     "preact": "^10.27.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
