--- a/doc/package.json
+++ b/doc/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.5.13",
     "@astrojs/preact": "^4.1.1",
     "@astrojs/react": "^4.4.0",
     "@astrojs/solid-js": "^5.1.1",
