feat: add build:all script to build all manual examples
- Create scripts/build-all.js to concurrently build all framework examples
- Add build:all npm script to root package.json
- Fix preact import case sensitivity issue (App.tsx vs app.tsx)
- All manual examples (react, solid, svelte, vue, preact, svelte5, vanilla) now build successfully

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "build:all": "node scripts/build-all.js",
     "dev": "node scripts/dev-all.js",
     "dev:all": "node scripts/dev-all.js",
     "test": "vitest run",
