--- a/doc/package.json
+++ b/doc/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "build:all": "./build.sh",
     "preview": "astro preview",
     "astro": "astro"
   },
