--- a/doc/public/svelte5/.vite/manifest.json
+++ b/doc/public/svelte5/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.BPuvWMw0.js",
+    "file": "_app/immutable/entry/app.ChwLi58C.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,12 +21,12 @@
     "css": ["_app/immutable/assets/0.BCOCm0Om.css"]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BDFH9NGw.js",
+    "file": "_app/immutable/nodes/1.B1lLAB33.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
-    "imports": ["_DsnmJJEf.js", "_CzjAlc6Y.js", "__feIyWM4.js", "_CSJ0VBKI.js"]
+    "imports": ["_DsnmJJEf.js", "_CzjAlc6Y.js", "__feIyWM4.js", "_Cn_iT8Sl.js"]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
     "file": "_app/immutable/nodes/2.Dq2QCsTa.js",
@@ -46,8 +46,8 @@
     "name": "attributes",
     "imports": ["_CzjAlc6Y.js"]
   },
-  "_CSJ0VBKI.js": {
-    "file": "_app/immutable/chunks/CSJ0VBKI.js",
+  "_Cn_iT8Sl.js": {
+    "file": "_app/immutable/chunks/Cn_iT8Sl.js",
     "name": "entry",
     "imports": ["__feIyWM4.js", "_CzjAlc6Y.js"]
   },
@@ -65,10 +65,10 @@
     "imports": ["_CzjAlc6Y.js"]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DXr-CUeE.js",
+    "file": "_app/immutable/entry/start.s5r4-Pkc.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
-    "imports": ["_CSJ0VBKI.js"]
+    "imports": ["_Cn_iT8Sl.js"]
   }
 }
