remove preact from deps

--- a/package.json
+++ b/package.json
@@ -22,11 +22,6 @@
       "import": "./dist/solid.mjs",
       "require": "./dist/solid.js"
     },
-    "./preact": {
-      "types": "./dist/preact.d.ts",
-      "import": "./dist/preact.mjs",
-      "require": "./dist/preact.js"
-    },
     "./svelte": {
       "types": "./dist/svelte.d.ts",
       "import": "./dist/svelte.mjs",
@@ -107,8 +102,5 @@
   "bugs": {
     "url": "https://github.com/juji/use-simple-debounce/issues"
   },
-  "homepage": "https://github.com/juji/use-simple-debounce#readme",
-  "dependencies": {
-    "preact": "^10.27.2"
-  }
+  "homepage": "https://github.com/juji/use-simple-debounce#readme"
 }
